2013-07-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Enable peephole for jp to jra optimization.

2013-07-24 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* support/regression/tests/bug-927659.c,
	  support/regression/tests/bug1057979.c,
	  support/regression/tests/bug2084206.c,
	  support/regression/tests/funptrs.c,
	  support/regression/tests/gcc-torture-execute-20020219-1.c,
	  support/regression/tests/gcc-torture-execute-20021118-2.c,
	  support/regression/tests/gcc-torture-execute-20021120-3.c,
	  support/regression/tests/gcc-torture-execute-20030626-1.c,
	  support/regression/tests/gcc-torture-execute-20030626-2.c,
	  support/regression/tests/gcc-torture-execute-20050104-1.c,
	  support/regression/tests/gcc-torture-execute-20070201-1.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-921208-1.c,
	  support/regression/tests/gcc-torture-execute-930513-1.c,
	  support/regression/tests/gcc-torture-execute-950612-1.c,
	  support/regression/tests/gcc-torture-execute-950915-1.c,
	  support/regression/tests/gcc-torture-execute-960327-1.c,
	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
	  support/regression/tests/snprintf.c:
	  Disabled tests that fail due to linker issue, bug #2196, 2198.
	* support/regression/tests/gcc-torture-execute-20030916-1.c:
	  Disable failing test, bug #2200.

2013-07-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c,
	  src/stm8/ralloc2.cc,
	  src/stm8/main.c:
	  More efficient unsigned right shifts by more than 3 bits, implement GETABIT, implement jump from and.
	* src/hc08/gen.c,
	  src/hc08/main.c:
	  Remove support for GETHBIT.

2013-07-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient unsigned right shifts by more than 7 bits.

2013-07-23 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/hc08/ralloc2.cc,
	  src/stm8/ralloc2.cc